--- a/Za Hunter/Base.lproj/Main.storyboard
+++ b/Za Hunter/Base.lproj/Main.storyboard
@@ -31,6 +31,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="HEW-SZ-Rxg" id="4JY-3n-NNM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
