--- a/Za Hunter/Base.lproj/Main.storyboard
+++ b/Za Hunter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gb2-Ed-hIs">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,20 +24,55 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Qpq-DI-DKl"/>
-                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="YcB-RG-aKf"/>
-                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="eKc-iW-Fxy"/>
-                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="s1v-Wa-but"/>
+                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="H18-kE-wGf"/>
+                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="MYm-lM-ajN"/>
+                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="XwT-mc-BbI"/>
+                            <constraint firstItem="HEW-SZ-Rxg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kee-e9-bkW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="KF7-2e-rSw"/>
                     <connections>
                         <outlet property="mapView" destination="HEW-SZ-Rxg" id="4JY-3n-NNM"/>
+                        <segue destination="zL8-uX-iIJ" kind="show" identifier="ShowLocationDetailsSegue" id="k4w-xb-WhR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-79.200000000000003" y="125.4872563718141"/>
+            <point key="canvasLocation" x="409" y="128"/>
+        </scene>
+        <!--Location Details View Controller-->
+        <scene sceneID="otg-Y4-ni6">
+            <objects>
+                <viewController id="zL8-uX-iIJ" customClass="LocationDetailsViewController" customModule="Za_Hunter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j9Y-og-cd5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="mfc-hN-cFN"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wVd-lm-7Ef" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-153" y="-562"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fGn-l0-JTU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gb2-Ed-hIs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gAL-Ea-Sg8">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="lIH-Qf-3rM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cj8-FO-bKe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-612" y="129"/>
         </scene>
     </scenes>
 </document>
