Finished setting up Location Details View Controller

--- a/Za Hunter/Base.lproj/Main.storyboard
+++ b/Za Hunter/Base.lproj/Main.storyboard
@@ -48,13 +48,54 @@
                     <view key="view" contentMode="scaleToFill" id="j9Y-og-cd5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGV-PT-dqo">
+                                <rect key="frame" x="87" y="200" width="200" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="KSa-NN-6XG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P6w-6p-jeR">
+                                <rect key="frame" x="87" y="258" width="200" height="150"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqG-yE-9nR">
+                                <rect key="frame" x="87" y="416" width="200" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="mfc-hN-cFN" firstAttribute="bottom" secondItem="DqG-yE-9nR" secondAttribute="bottom" constant="201" id="7rV-Eh-fY9"/>
+                            <constraint firstItem="P6w-6p-jeR" firstAttribute="trailing" secondItem="DqG-yE-9nR" secondAttribute="trailing" id="8dj-gE-2QS"/>
+                            <constraint firstItem="DqG-yE-9nR" firstAttribute="top" secondItem="P6w-6p-jeR" secondAttribute="bottom" constant="8" symbolic="YES" id="Q80-Q2-kaR"/>
+                            <constraint firstItem="zGV-PT-dqo" firstAttribute="centerX" secondItem="j9Y-og-cd5" secondAttribute="centerX" id="U41-ek-JgC"/>
+                            <constraint firstItem="P6w-6p-jeR" firstAttribute="leading" secondItem="DqG-yE-9nR" secondAttribute="leading" id="dfs-wF-ser"/>
+                            <constraint firstItem="zGV-PT-dqo" firstAttribute="top" secondItem="mfc-hN-cFN" secondAttribute="top" constant="136" id="gGv-au-nDK"/>
+                            <constraint firstItem="zGV-PT-dqo" firstAttribute="trailing" secondItem="P6w-6p-jeR" secondAttribute="trailing" id="jdP-Yd-daw"/>
+                            <constraint firstItem="zGV-PT-dqo" firstAttribute="leading" secondItem="P6w-6p-jeR" secondAttribute="leading" id="mIm-1e-277"/>
+                            <constraint firstItem="P6w-6p-jeR" firstAttribute="top" secondItem="zGV-PT-dqo" secondAttribute="bottom" constant="8" symbolic="YES" id="oGr-Nj-sXR"/>
+                            <constraint firstItem="P6w-6p-jeR" firstAttribute="centerY" secondItem="j9Y-og-cd5" secondAttribute="centerY" id="pkf-wE-Dlk"/>
+                            <constraint firstItem="zGV-PT-dqo" firstAttribute="leading" secondItem="mfc-hN-cFN" secondAttribute="leading" constant="87" id="tIV-mN-Oo2"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="mfc-hN-cFN"/>
                     </view>
+                    <connections>
+                        <outlet property="addressLabel" destination="P6w-6p-jeR" id="5tO-s5-Tiu"/>
+                        <outlet property="nameLabel" destination="zGV-PT-dqo" id="7NE-h2-9Ho"/>
+                        <outlet property="phoneLabel" destination="DqG-yE-9nR" id="lui-qo-k67"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wVd-lm-7Ef" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-153" y="-562"/>
+            <point key="canvasLocation" x="-154.40000000000001" y="-562.66866566716647"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fGn-l0-JTU">
